--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "start:dev": "tsx watch --env-file=.env src/server.ts",
-    "build": "prisma generate && tsup src/**/*.ts && node scripts/copy-templates.js",
+    "build": "prisma generate && tsup && node scripts/copy-templates.js",
     "start": "node dist/server.js"
   },
   "keywords": [],
